// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchResult should render Error 1`] = `
<Box
  justifyContent="center"
  marginTop="s48"
>
  Error...
</Box>
`;

exports[`SearchResult should render Loading 1`] = `
<Box
  justifyContent="center"
  marginTop="s48"
>
  <Loader />
</Box>
`;

exports[`SearchResult should render null when items is empty 1`] = `""`;

exports[`SearchResult should render null when products not present 1`] = `""`;

exports[`SearchResult should render products 1`] = `
<Grid
  main={true}
>
  <Filter
    options={
      Array [
        "\`42",
        "\`55",
      ]
    }
    productName="tv"
  />
  <ProductList
    products={
      Array [
        Object {
          "id": "__ID__",
          "imageUrl": "__IMAGE_URL__",
          "price": "100",
          "productUrl": "__URL__",
          "shop": "__SHOP__",
          "title": "__TITLE__",
        },
      ]
    }
  />
</Grid>
`;
